Abyan Ubah Footer

--- a/index.html
+++ b/index.html
@@ -1090,10 +1090,10 @@
 						<div class="col-sm-7">
 							<div class="footer-social">
 								<span><i class="fa fa-phone">+0811-3219-992</i></span>
-								<a href="#"><i class="fa fa-facebook"></i></a>	
-								<a href="#"><i class="fa fa-twitter"></i></a>
-								<a href="#"><i class="fa fa-linkedin"></i></a>
-								<a href="#"><i class="fa fa-google-plus"></i></a>
+								<a href="https://www.facebook.com/generalsolusindoofficial/?locale=id_ID"><i class="fa fa-facebook"></i></a>	
+								<a href="https://www.instagram.com/generalsolusindoofficial/"><i class="fa fa-instagram"></i></a>
+								<a href="https://id.linkedin.com/pulse/cv-general-solusindo-general-solusindo-1c"><i class="fa fa-linkedin"></i></a>
+								<a href="https://www.google.com/search?gs_ssp=eJzj4tVP1zc0TDYsNi42jy82YLRSNagwSkkxTzU0MbW0NE1NSTYytjKoSDK0SEs1Sk4yMzMySDJITfYSTE_NSy1KzFEozs8pLc7MS8kHAP9qFmU&q=general+solusindo&oq=general+&gs_lcrp=EgZjaHJvbWUqFQgBEC4YJxivARjHARiABBiKBRiOBTIGCAAQRRg5MhUIARAuGCcYrwEYxwEYgAQYigUYjgUyCggCEAAYsQMYgAQyBwgDEAAYgAQyEAgEEC4YxwEYsQMY0QMYgAQyCggFEAAYsQMYgAQyBggGEEUYPDIGCAcQRRg80gEIMjkyNGowajeoAgCwAgA&sourceid=chrome&ie=UTF-8"><i class="fa fa-google-plus"></i></a>
 							</div>
 						</div>
 					</div>
